Prevent homepage flicker

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,13 +37,12 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	background-color: var(--background-color);
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: var(--text-color);
 	font-size: 20px;
 	line-height: 1.7;
-	background: url("/branding/backdrop.png");
+	background: url("/branding/backdrop-tile.png") var(--background-color);
 }
 main {
 	width: 720px;
